--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
 					<div class="px-50 pt-50 pb-60 relative d-md-flex flex-column justify-content-between align-items-start h-full inner">
 						<div class="top">
 							<!--<div class="mb-2 f-14 color-heading semibold text-uppercase sp-20 subtitle">Step 1</div>-->
-							<p class="medium">Distance-basedd clustering using word2vec [4] representation</p>
+							<p class="medium">Distance-based clustering using word2vec [4] representation</p>
 							<p class="medium">Manual revision of the clustered keywords</p>
 							<p class="medium">Word-Net [5] similarity measure among the final seeds. If Similarity 0.0 take the seed as a core concept, otherwise, check BioPortal for a common ancestor</p>
 							<p class="medium">Relations are determined by a Biodiversity expert<p>
